--- a/vector/vector.toml
+++ b/vector/vector.toml
@@ -96,12 +96,74 @@ if is_empty(array!(."status.silencedBy")) {
 
 """
 
-[sinks.stdout]
-type = "console"
-inputs = [ "webhook_transform2"]
-target = "stdout"
-  [sinks.stdout.encoding]
-  codec = "text"
+[sources.silences]
+type = "http_client"
+endpoint = "http://alertmanager:9093/api/v2/silences"
+method = "GET"
+decoding.codec = "json"
+scrape_interval_secs = 60
+
+  [sources.silences.headers]
+  Accept = [ "application/json", "text/plain" ]
+
+[transforms.silences_remap]
+inputs = [ "silences" ]
+type = "remap"
+source = """
+ts_now = to_unix_timestamp(now(), unit: "milliseconds")
+.endsAt = to_timestamp!(.endsAt, unit: "milliseconds")
+.endsAt = to_unix_timestamp(.endsAt, "milliseconds")
+.startsAt = to_timestamp!(.startsAt, unit: "milliseconds")
+.startsAt = to_unix_timestamp(.startsAt, "milliseconds")
+.updatedAt = to_timestamp!(.updatedAt, unit: "milliseconds")
+.updatedAt = to_unix_timestamp(.updatedAt, "milliseconds")
+
+.drop = false
+obj = {}
+.match = {}
+for_each(array!(.matchers)) -> |_index, value| {
+    .mid = get!(.matchers, [to_int(_index)])
+    eq = ""
+    reg = ""
+    if to_bool!(.mid.isEqual) {
+        eq = "="
+    } else {
+        eq = "!="
+    }
+    if to_bool!(.mid.isRegex) {
+        reg = "~"
+    }
+    n = .mid.name
+    v, err = eq + reg + .mid.value
+    .match |= object(set!(obj, [.mid.name], v))
+    del(.mid)
+}
+del( .matchers )
+matchers = del(.match )
+. = flatten(.)
+.matchers = matchers
+.matchers_string = encode_key_value(.matchers)
+"""
+
+[transforms.silences_filter]
+type = "filter"
+inputs = [ "silences_remap" ]
+condition = ".drop == false"
+
+
+[sinks.silences_clickhouse]
+inputs = ["silences_filter"]
+type = "clickhouse"
+database = "r0"
+endpoint = "http://clickhouse-0.localhost:8123"
+table = "silences"
+compression = "gzip"
+tls.verify_hostname = false
+auth.user = "demouser"
+auth.password = "239QV8JkGmF9AZM"
+auth.strategy = "basic"
+batch.timeout_secs = 30
+skip_unknown_fields = true
 
 [sinks.clickhouse]
 inputs = ["webhook_transform2", "vrl2"]
